refactor: corrige code smells